--- a/sass/components/_btn.scss
+++ b/sass/components/_btn.scss
@@ -5,7 +5,7 @@
   margin-left: auto;
   margin-right: auto;
   padding: 10px 32px;
-  min-width: 200px;
+  // min-width: 200px;
 
   color: $maine-text-color;
   background-color: $button-secondary-background;
@@ -53,9 +53,14 @@
 /*============== BUTTON PORTFOLIO(SECONDARY)======= */
 
 .button.secondary {
+  padding: 6px 22px;
+  // padding-left: 22px;
+  // padding-right: 22px;
+  width: 100%;
+  margin-bottom: 15px;
+
   color: $maine-text-color;
   background-color: $button-secondary-background;
-  padding: 6px 22px;
 
   transition-property: color, background-color, box-shadow;
   transition-duration: $transition-duration;
@@ -69,25 +74,25 @@
       0px 2px 2px rgba(0, 0, 0, 0.12);
   }
 
-  &.all {
-    min-width: 73px;
-  }
+  // &.all {
+  //   min-width: 73px;
+  // }
 
-  &.web {
-    min-width: 128px;
-  }
+  // &.web {
+  //   min-width: 128px;
+  // }
 
-  &.app {
-    min-width: 145px;
-  }
+  // &.app {
+  //   min-width: 145px;
+  // }
 
-  &.design {
-    min-width: 103px;
-  }
+  // &.design {
+  //   min-width: 103px;
+  // }
 
-  &.marketing {
-    min-width: 130px;
-  }
+  // &.marketing {
+  //   min-width: 130px;
+  // }
 }
 
 /* ===============MOBILE_MENU_BTN==============*/
