--- a/css/main.css
+++ b/css/main.css
@@ -300,6 +300,11 @@ img {
   }
 }
 
+.portfolio-item {
+  width: 405px;
+  height: 404px;
+}
+
 .navigation {
   display: flex;
   flex-wrap: wrap;
@@ -333,7 +338,7 @@ img {
   }
   .portfolio-item {
     /* width: 370px; */
-    flex-basis: calc(100% / 3 - 30px);
+    flex-basis: calc((100% - 90px) / 3);
     margin: 15px;
     background-color: #ffffff;
     outline: 1px solid #eeeeee;
@@ -359,6 +364,7 @@ img {
 
 .portfolio-link {
   display: block;
+  width: 100%;
   margin: 0;
   text-decoration: none;
   transition-property: box-shadow, transform;
