--- a/sass/layout/_portfolio.scss
+++ b/sass/layout/_portfolio.scss
@@ -7,8 +7,14 @@
     padding-top: 94px;
     padding-bottom: 94px;
   }
+
   &-list {
     // width: 100%;
+  }
+
+  &-item {
+    width: 405px;
+    height: 404px;
   }
 }
 
@@ -46,7 +52,8 @@
 
     &-item {
       /* width: 370px; */
-      flex-basis: calc(100% / 3 - 30px);
+      // flex-basis: calc(100% / 3 - 30px);
+      flex-basis: calc((100% - 90px) / 3);
       margin: 15px;
 
       background-color: $primary-white-color;
@@ -79,6 +86,7 @@
 
 .portfolio-link {
   display: block;
+  width: 100%;
   margin: 0;
   text-decoration: none;
 
