--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -47,7 +47,7 @@
 
     font-weight: 700;
     font-size: 14px;
-    line-height: 1.142px;
+    line-height: 1.142;
     letter-spacing: 0.03em;
     text-transform: uppercase;
     color: $primary-white-color;
