--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -10,7 +10,6 @@
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  // margin-bottom: 60px;
 
   background-image: linear-gradient(
       to right,
@@ -31,12 +30,19 @@
   }
 
   &-title {
+    margin-top: 0;
+    margin-bottom: 30px;
+
     color: $primary-white-color;
     font-weight: 900;
     font-size: 26px;
     line-height: 1.615;
     letter-spacing: 0.06em;
-    margin-bottom: 30px;
+
+    @media screen and (min-width: 1200px) {
+      font-size: 44px;
+      line-height: 1.364;
+    }
   }
 
   @media screen and (min-width: 768px) {
@@ -60,7 +66,6 @@
     }
   }
   @media screen and (min-width: 1200px) {
-    max-height: 600px;
     padding-top: 200px;
     padding-bottom: 200px;
 
@@ -81,68 +86,5 @@
         ),
         url(../images/maine/hero/hero-desktop@2x.jpg);
     }
-
-    &-title {
-      font-size: 44px;
-      line-height: 1.364;
-      letter-spacing: 0.06em;
-      margin-top: 0;
-    }
   }
 }
-
-// .hero {
-//   text-align: center;
-//   padding-top: 200px;
-//   padding-bottom: 200px;
-//   max-width: 1600px;
-//   min-height: 600px;
-//   margin-left: auto;
-//   margin-right: auto;
-//   background-color: $hero-background;
-//   background-image: linear-gradient(
-//       to right,
-//       rgba(47, 48, 58, 0.4),
-//       rgba(47, 48, 58, 0.4)
-//     ),
-//     url(../images/maine/hero-bg-opt.jpg);
-
-//   background-repeat: no-repeat;
-//   background-position: center;
-//   background-size: cover;
-
-//   &-title {
-//     color: $primary-white-color;
-//     font-weight: 900;
-//     font-size: 44px;
-//     line-height: 1.37;
-//     letter-spacing: 0.06em;
-
-//     margin-top: 0px;
-//     // margin-bottom: 30px;
-//   }
-// }
-
-// @media screen and (min-width: 480px) {
-//   .hero {
-//     background-image: linear-gradient(
-//         to right,
-//         rgba(47, 48, 58, 0.4),
-//         rgba(47, 48, 58, 0.4)
-//       ),
-//       url(../images/maine/hero/hero-mob.jpg);
-
-//     @media screen and (min-device-pixel-ratio: 2),
-//       screen and (min-resolution: 192dpi),
-//       screen and (min-resolution: 2dppx) {
-//       .hero {
-//         background-image: linear-gradient(
-//             to right,
-//             rgba(47, 48, 58, 0.4),
-//             rgba(47, 48, 58, 0.4)
-//           ),
-//           url(../images/maine/hero/hero-mob@2x.jpg);
-//       }
-//     }
-//   }
-// }
