--- a/sass/layout/_mobile-menu.scss
+++ b/sass/layout/_mobile-menu.scss
@@ -37,6 +37,7 @@
     align-items: center;
     justify-content: space-between;
     padding: 0;
+    padding-right: 15px;
     margin: 0;
     min-width: 619px;
     height: 100%;
