--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -5,7 +5,7 @@
   padding-top: 118px;
   padding-bottom: 118px;
   max-width: 768px;
-  max-height: 400px;
+  // max-height: 400px;
   background-color: $hero-background;
   background-repeat: no-repeat;
   background-position: center;
