--- a/sass/layout/_job.scss
+++ b/sass/layout/_job.scss
@@ -26,23 +26,17 @@
     margin-left: 30px;
   }
 
-  .job h2,
-  .team h2,
-  .clients h2 {
-    font-weight: 700;
-    font-size: 36px;
-    line-height: 1.167;
-    text-align: center;
+  // .job h2,
+  // .team h2,
+  // .clients h2 {
+  //   font-weight: 700;
+  //   font-size: 36px;
+  //   line-height: 1.167;
+  //   text-align: center;
 
-    margin-top: 0px;
-    margin-bottom: 50px;
-  }
-
-  .job img,
-  .team img,
-  .portfolio img {
-    display: block;
-  }
+  //   margin-top: 0px;
+  //   margin-bottom: 50px;
+  // }
 
   .job-thumb {
     position: relative;
