--- a/css/main.css
+++ b/css/main.css
@@ -41,6 +41,24 @@ img {
   height: auto;
 }
 
+h2 {
+  margin-top: 0;
+  margin-bottom: 30px;
+  font-size: 28px;
+  font-weight: 700;
+  line-height: 1.178;
+  text-align: center;
+  letter-spacing: 0.03em;
+}
+
+@media screen and (min-width: 1200px) {
+  h2 {
+    margin-bottom: 50px;
+    font-size: 36px;
+    line-height: 1.167;
+  }
+}
+
 /*================CONTAINER===============*/
 .container {
   width: 100%;
@@ -580,21 +598,6 @@ img {
   .job-list .job-item + .job-item {
     margin-left: 30px;
   }
-  .job h2,
-  .team h2,
-  .clients h2 {
-    font-weight: 700;
-    font-size: 36px;
-    line-height: 1.167;
-    text-align: center;
-    margin-top: 0px;
-    margin-bottom: 50px;
-  }
-  .job img,
-  .team img,
-  .portfolio img {
-    display: block;
-  }
   .job-thumb {
     position: relative;
   }
@@ -620,11 +623,6 @@ img {
   padding-top: 60px;
   padding-bottom: 60px;
   background-color: #f5f4fa;
-}
-
-.team h2 {
-  margin-bottom: 30px;
-  text-align: center;
 }
 
 .team .item {
@@ -698,7 +696,19 @@ img {
 .clients h2 {
   margin-top: 0;
   margin-bottom: 30px;
+  font-weight: 700;
+  font-size: 28px;
+  line-height: 1.178;
   text-align: center;
+  letter-spacing: 0.03em;
+}
+
+@media screen and (min-width: 1200px) {
+  .clients h2 {
+    margin-bottom: 50px;
+    font-size: 36px;
+    line-height: 1.167;
+  }
 }
 
 .clients-list {
@@ -1225,7 +1235,7 @@ div.relative {
   padding-bottom: 48px;
   padding-right: 15px;
   max-width: 480px;
-  height: 796px;
+  height: 100vh;
   color: #212121;
   font-family: Roboto;
   font-weight: 500;
