--- a/sass/layout/_clients.scss
+++ b/sass/layout/_clients.scss
@@ -7,7 +7,18 @@
   & h2 {
     margin-top: 0;
     margin-bottom: 30px;
+
+    font-weight: 700;
+    font-size: 28px;
+    line-height: 1.178;
     text-align: center;
+    letter-spacing: 0.03em;
+
+    @media screen and (min-width: 1200px) {
+      margin-bottom: 50px;
+      font-size: 36px;
+      line-height: 1.167;
+    }
   }
 
   &-list {
