--- a/sass/layout/_mobile-menu.scss
+++ b/sass/layout/_mobile-menu.scss
@@ -10,9 +10,9 @@
   padding-bottom: 48px;
   padding-right: 15px;
   max-width: 480px;
-  height: 796px;
+  // height: 796px;
   // max-width: 100vw;
-  // height: 100vh;
+  height: 100vh;
 
   color: $maine-text-color;
   font-family: Roboto;
