--- a/css/main.css
+++ b/css/main.css
@@ -64,7 +64,6 @@ h2 {
   width: 100%;
   padding: 0 15px;
   margin: 0 auto;
-  outline: springgreen;
 }
 
 @media screen and (min-width: 480px) {
@@ -443,6 +442,7 @@ h2 {
   padding-top: 118px;
   padding-bottom: 118px;
   max-width: 768px;
+  margin: 0 auto;
   background-color: #2f303a;
   background-repeat: no-repeat;
   background-position: center;
@@ -458,7 +458,7 @@ h2 {
 
 @media screen and (min-width: 768px) {
   .hero {
-    max-width: 1600px;
+    max-width: 1200px;
     background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/maine/hero/hero-tablet.jpg);
   }
 }
@@ -471,6 +471,7 @@ h2 {
 
 @media screen and (min-width: 1200px) {
   .hero {
+    max-width: 1600px;
     padding-top: 200px;
     padding-bottom: 200px;
     background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/maine/hero/hero-desktop.jpg);
@@ -1227,7 +1228,7 @@ div.relative {
 /* ========MOBILE_MENU========*/
 .mobile-menu-container {
   z-index: 1;
-  position: absolute;
+  position: fixed;
   display: none;
   background-color: #ffffff;
   padding-left: 40px;
@@ -1235,11 +1236,12 @@ div.relative {
   padding-bottom: 48px;
   padding-right: 15px;
   max-width: 480px;
+  max-width: 100vw;
   height: 100vh;
   color: #212121;
   font-family: Roboto;
   font-weight: 500;
-  font-size: 40px;
+  font-size: 10px;
   line-height: 1.175;
   letter-spacing: 0.02em;
 }
@@ -1248,6 +1250,7 @@ div.relative {
   display: block;
   position: absolute;
   top: 0.1px;
+  left: 0, 1px;
 }
 
 @media screen and (min-width: 768px) {
