--- a/sass/base/_container.scss
+++ b/sass/base/_container.scss
@@ -2,10 +2,9 @@
 
 .container {
   width: 100%;
-  // max-width: 480px;
   padding: 0 15px;
   margin: 0 auto;
-  outline: springgreen;
+  // outline: springgreen;
 
   @media screen and (min-width: 480px) {
     width: 480px;
