--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -5,6 +5,7 @@
   padding-top: 118px;
   padding-bottom: 118px;
   max-width: 768px;
+  margin: 0 auto;
   // max-height: 400px;
   background-color: $hero-background;
   background-repeat: no-repeat;
@@ -30,7 +31,7 @@
   }
 
   @media screen and (min-width: 768px) {
-    max-width: 1600px;
+    max-width: 1200px;
     background-image: linear-gradient(
         to right,
         rgba(47, 48, 58, 0.4),
@@ -50,6 +51,7 @@
     }
   }
   @media screen and (min-width: 1200px) {
+    max-width: 1600px;
     padding-top: 200px;
     padding-bottom: 200px;
 
