--- a/sass/layout/_mobile-menu.scss
+++ b/sass/layout/_mobile-menu.scss
@@ -25,8 +25,8 @@
   &.is-open {
     display: block;
     position: absolute;
-    top: 0.1px;
-    left: 0, 1px;
+    top: 0px;
+    left: 0px;
   }
 
   // top: 50%;
@@ -133,7 +133,8 @@
 
 .header-contact__link--tel {
   color: $accent-color;
-  font-size: 34px;
+  // font-size: 34px;
+  font-size: 10px;
   line-height: 1.176;
   text-decoration: none;
   &:hover,
@@ -151,7 +152,8 @@
 
 .header-contact__link--mail {
   color: $secondary-text-color;
-  font-size: 24px;
+  // font-size: 24px;
+  font-size: 10px;
   line-height: 1.167;
   text-decoration: none;
   &:hover,
@@ -195,7 +197,8 @@
   margin-right: 10px;
   padding-right: 10px;
   color: $accent-color;
-  font-size: 18px;
+  // font-size: 18px;
+  font-size: 10px;
   line-height: 1.222;
   text-decoration: none;
 }
