--- a/sass/layout/_mobile-menu.scss
+++ b/sass/layout/_mobile-menu.scss
@@ -10,15 +10,18 @@
   padding-top: 48px;
   padding-bottom: 48px;
   padding-right: 15px;
-  max-width: 480px;
+  // max-width: 480px;
   // height: 796px;
-  max-width: 100vw;
+  width: 100vw;
   height: 100vh;
 
   color: $maine-text-color;
   font-family: Roboto;
   font-weight: 500;
   font-size: 10px;
+  @media screen and (min-width: 480px) {
+    font-size: 40px;
+  }
   line-height: 1.175;
   letter-spacing: 0.02em;
 
@@ -57,6 +60,7 @@
 .site-nav {
   display: flex;
   justify-content: space-between;
+  margin-bottom: auto;
 }
 
 .site-nav-list {
@@ -135,6 +139,9 @@
   color: $accent-color;
   // font-size: 34px;
   font-size: 10px;
+  @media screen and (min-width: 480px) {
+    font-size: 34px;
+  }
   line-height: 1.176;
   text-decoration: none;
   &:hover,
@@ -154,6 +161,10 @@
   color: $secondary-text-color;
   // font-size: 24px;
   font-size: 10px;
+  @media screen and (min-width: 480px) {
+    font-size: 24px;
+  }
+
   line-height: 1.167;
   text-decoration: none;
   &:hover,
@@ -199,6 +210,10 @@
   color: $accent-color;
   // font-size: 18px;
   font-size: 10px;
+  @media screen and (min-width: 480px) {
+    font-size: 18px;
+  }
+
   line-height: 1.222;
   text-decoration: none;
 }
