--- a/sass/layout/_mobile-menu.scss
+++ b/sass/layout/_mobile-menu.scss
@@ -57,6 +57,12 @@
   }
 }
 
+.laaaaa {
+  position: fixed;
+  bottom: 10px;
+  left: 10px;
+}
+
 .site-nav {
   display: flex;
   justify-content: space-between;
