--- a/sass/layout/_mobile-menu.scss
+++ b/sass/layout/_mobile-menu.scss
@@ -27,7 +27,8 @@
 
   &.is-open {
     display: block;
-    position: absolute;
+    // position: absolute;
+    position: fixed;
     top: 0px;
     left: 0px;
   }
