--- a/sass/layout/_mobile-menu.scss
+++ b/sass/layout/_mobile-menu.scss
@@ -18,7 +18,7 @@
   color: $maine-text-color;
   font-family: Roboto;
   font-weight: 500;
-  font-size: 10px;
+  font-size: 15px;
   @media screen and (min-width: 480px) {
     font-size: 40px;
   }
@@ -73,7 +73,6 @@
 }
 
 .site-nav-list {
-  margin-bottom: 302px;
   @media screen and (min-width: 768px) {
     margin-bottom: 0;
     margin-left: 88px;
@@ -147,7 +146,7 @@
 .header-contact__link--tel {
   color: $accent-color;
   // font-size: 34px;
-  font-size: 10px;
+  font-size: 15px;
   @media screen and (min-width: 480px) {
     font-size: 34px;
   }
@@ -169,7 +168,7 @@
 .header-contact__link--mail {
   color: $secondary-text-color;
   // font-size: 24px;
-  font-size: 10px;
+  font-size: 15px;
   @media screen and (min-width: 480px) {
     font-size: 24px;
   }
@@ -185,6 +184,12 @@
     display: flex;
     align-items: center;
     justify-content: center;
+  }
+}
+
+.header-contact__item--tel {
+  @media screen and (max-width: 768px) {
+    margin-bottom: 20px;
   }
 }
 
@@ -218,7 +223,7 @@
   padding-right: 10px;
   color: $accent-color;
   // font-size: 18px;
-  font-size: 10px;
+  font-size: 13px;
   @media screen and (min-width: 480px) {
     font-size: 18px;
   }
@@ -233,12 +238,12 @@
   top: 0;
   right: 0;
   display: block;
-  height: 10px;
+  height: 22px;
   width: 1px;
   background-color: $secondary-text-color;
-  @media screen and (min-width: 480px) {
-    height: 22px;
-  }
+  // @media screen and (min-width: 480px) {
+  //   height: 22px;
+  // }
 }
 
 .site-nav-list__item .current {
