--- a/sass/layout/_portfolio.scss
+++ b/sass/layout/_portfolio.scss
@@ -42,7 +42,8 @@
   }
 
   &-item {
-    width: 450px;
+    // width: 450px;
+    margin-bottom: 15px;
     background-color: $primary-white-color;
     outline: 1px solid $frame-portfolio-photo;
 
