--- a/css/main.css
+++ b/css/main.css
@@ -1202,6 +1202,7 @@ div.relative {
 }
 
 .exept0 {
+  display: inline-block;
   margin-left: 4px;
   font-size: 12px;
   line-height: 1.167;
@@ -1215,6 +1216,7 @@ div.relative {
 
 @media screen and (max-width: 479px) {
   .chekbox-text {
+    display: inline-block;
     font-size: 8px;
   }
 }
@@ -1247,7 +1249,7 @@ div.relative {
   color: #212121;
   font-family: Roboto;
   font-weight: 500;
-  font-size: 15px;
+  font-size: 25px;
   line-height: 1.175;
   letter-spacing: 0.02em;
 }
@@ -1388,7 +1390,7 @@ div.relative {
 
 .header-contact__link--tel {
   color: #2196f3;
-  font-size: 15px;
+  font-size: 25px;
   line-height: 1.176;
   text-decoration: none;
 }
@@ -1414,7 +1416,7 @@ div.relative {
 
 .header-contact__link--mail {
   color: #757575;
-  font-size: 15px;
+  font-size: 25px;
   line-height: 1.167;
   text-decoration: none;
 }
@@ -1495,9 +1497,15 @@ div.relative {
   top: 0;
   right: 0;
   display: block;
-  height: 22px;
+  height: 15px;
   width: 1px;
   background-color: #757575;
+}
+
+@media screen and (min-width: 480px) {
+  .mobile-menu-soclink-link::after {
+    height: 22px;
+  }
 }
 
 .site-nav-list__item .current {
