--- a/sass/layout/_mobile-menu.scss
+++ b/sass/layout/_mobile-menu.scss
@@ -18,7 +18,7 @@
   color: $maine-text-color;
   font-family: Roboto;
   font-weight: 500;
-  font-size: 15px;
+  font-size: 25px;
   @media screen and (min-width: 480px) {
     font-size: 40px;
   }
@@ -146,7 +146,7 @@
 .header-contact__link--tel {
   color: $accent-color;
   // font-size: 34px;
-  font-size: 15px;
+  font-size: 25px;
   @media screen and (min-width: 480px) {
     font-size: 34px;
   }
@@ -168,7 +168,7 @@
 .header-contact__link--mail {
   color: $secondary-text-color;
   // font-size: 24px;
-  font-size: 15px;
+  font-size: 25px;
   @media screen and (min-width: 480px) {
     font-size: 24px;
   }
@@ -238,12 +238,12 @@
   top: 0;
   right: 0;
   display: block;
-  height: 22px;
+  height: 15px;
   width: 1px;
   background-color: $secondary-text-color;
-  // @media screen and (min-width: 480px) {
-  //   height: 22px;
-  // }
+  @media screen and (min-width: 480px) {
+    height: 22px;
+  }
 }
 
 .site-nav-list__item .current {
